# dash-pydantic-form

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  conftest.py  pixi.toml  pyproject.toml  ruff.toml  usage.py  usage2.py  usage3.py  usage_custom_tree_layout.py
.github/workflows/: publish.yaml
.pixi/envs/default/conda-meta/: _libgcc_mutex-0.1-conda_forge.json  _openmp_mutex-4.5-2_gnu.json  annotated-types-0.7.0-pyhd8ed1ab_0.json  bzip2-1.0.8-h4bc722e_7.json  ca-certificates-2024.8.30-hbcca054_0.json  ld_impl_linux-64-2.43-h712a8e2_2.json  libffi-3.4.2-h7f98852_5.json  libgcc-14.2.0-h77fa898_1.json  libgcc-ng-14.2.0-h69a702a_1.json  libgomp-14.2.0-h77fa898_1.json  libnsl-2.0.1-hd590300_0.json  libsqlite-3.47.0-hadc24fc_1.json  libuuid-2.38.1-h0b41bf4_0.json  libxcrypt-4.4.36-hd590300_1.json  libzlib-1.3.1-hb9d3cd8_2.json  ncurses-6.5-he02047a_1.json  openssl-3.3.2-hb9d3cd8_0.json  pixi  pixi_env_prefix  pydantic-2.9.2-pyhd8ed1ab_0.json  pydantic-core-2.23.4-py310h505e2c1_0.json  python-3.10.15-h4a871b0_2_cpython.json  python_abi-3.10-5_cp310.json  readline-8.2-h8228510_1.json  tk-8.6.13-noxft_h4845f30_101.json  typing-extensions-4.12.2-hd8ed1ab_0.json  typing_extensions-4.12.2-pyha770c72_0.json  tzdata-2024b-hc8b5060_0.json  xz-5.2.6-h166bdaf_0.json
.pixi/envs/default/include/python3.10/: pyconfig.h
.pixi/envs/default/share/terminfo/a/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
.pixi/envs/default/share/terminfo/c/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
.pixi/envs/default/share/terminfo/d/: ddr  dec-vt220
.pixi/envs/default/share/terminfo/e/: emu-220
.pixi/envs/default/share/terminfo/g/: go140  go140w  go225
.pixi/envs/default/share/terminfo/h/: hazel  hp2392  hp2641a  hp300h  hp700-wy  hp9845  hp98550  hpex  hpsub
.pixi/envs/default/share/terminfo/i/: ims-ansi
.pixi/envs/default/share/terminfo/k/: kt7
.pixi/envs/default/share/terminfo/m/: mai  (+1 more)
.pixi/envs/default/share/zoneinfo/: tzdata.zi
assets/: usage.js
dash_pydantic_form/: __init__.py  form_section.py  i18n.py  ids.py  model_form.py  pydantic_form_scripts.js  pydantic_form_styles.css  pydf_aggrid.js  pydf_clientside.js  pydf_styles.css  quantity.py  utils.py
dash_pydantic_form/fields/: __init__.py  all_fields.py  base_fields.py  dict_field.py  discriminated_model_field.py  editabletable_field.py  list_field.py  markdown_field.py  model_field.py  model_fields.py  model_list_field.py  path_field.py  quantity_field.py  table_field.py  transferlist_field.py
dash_pydantic_form/form_layouts/: __init__.py  accordion_form_layout.py  form_layout.py  steps_form_layout.py  tabs_form_layout.py
dash_pydantic_form/locales/: pydf.pot
dash_pydantic_form/locales/en/LC_MESSAGES/: pydf.po
dash_pydantic_form/locales/fr/LC_MESSAGES/: pydf.po
docs/: _config.yml  home.md
examples/: custom_tree_layout.py  programmatic_form.py
tests/: test_auto_generated_ids.py  test_basic_form.py  test_clientside_data_getter.py  test_dict.py  test_discriminated_union.py  test_dynamic_model_recall.py  test_list.py  test_model_form.py  test_quantity.py  test_root_model.py  test_table_field.py  test_utils.py  utils.py
tests/assets/: pydf_usage.js
(+119 files in other folders)
