[project]
name = "dash-pydantic-form"
dynamic = ["version"]
description = "Interface between Dash and Firestore"
authors = [
    {name = "Renaud Lainé", email = "renaud.laine@enea-consulting.com"},
]
readme = "README.md"
requires-python =  ">=3.10,<3.11"
license = {text = "Copyright ENEA Australia Pty Ltd - All Rights Reserved. Proprietary and confidential"}
dependencies = [
    "dash",
    "dash_mantine_components>=0.14",
    "dash_iconify",
    "dash_ag_grid",
    "pydantic==2.*",
    "flatdict",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.urls]
Source= "https://github.com/RenaudLN/dash-pydantic-form"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 67", "setuptools_scm>=7.1"]

[tool.setuptools]
include-package-data = true
packages = ["dash_pydantic_form"]

[tool.setuptools.package-data]
doc = ["*"]
"*" = ["*.lock"]

[tool.setuptools_scm]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | docs
)/
'''

[tool.ruff]
line-length = 120
fix = true
target-version = "py39"
select = ["I", "D", "UP", "S", "C4", "SIM"]
ignore = ["D100", "D104", "D401", "D205"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pylint.MASTER]
ignore = ["*.ipynb","docs"]

[tool.pylint.'MESSAGES CONTROL']
disable=["import-error", "duplicate-code", "fixme", "missing-module-docstring", "too-few-public-methods"]

[tool.pylint.REPORTS]
reports = false

[tool.pylint.BASIC]
function-rgx = "[a-z_][a-z0-9_]{1,36}$"
variable-rgx = "[a-z_][a-z0-9_]{1,36}$"
variable-name-hint = "[a-z_][a-z0-9_]{1,36}$" # pylint: disable=E0015
argument-rgx = "[a-z_][a-z0-9_]{1,36}$"
const-rgx="[a-zA-Z_][a-zA-Z0-9_]{1,36}$"

[tool.pylint.FORMAT]
max-line-length=120

[tool.conda-lock.dependencies]
firebase-admin = {source = "pypi"}
